style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --white: #e4dbdb;
  --black: #2b2b2b;
  --gray: #272727;
}

/* Nav */
.nav {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--gray);
  position: sticky;
  top: 0;
}

.nav ul {
  display: flex;
  list-style: none;
  margin: 35px 0px;
}

.nav ul li {
  font-family: "Times New Roman", Times, serif;
  font-size: 1.1rem;
  font-weight: bold;
}

.nav ul li a {
  text-decoration: none;
  color: var(--white);
  padding: 8px 25px;
  transition: all 0.5s ease;
}

.nav ul li a:hover {
  background-color: var(--white);
  color: black;
  box-shadow: 0 0 10px var(--white);
}

/* home section */
#home {
  display: flex;
  flex-direction: column;
  background-color: rgba(0 0 0 0.5);
  height: 900px;
  justify-content: center;
  align-items: center;
  color: var(--white);
}

#home::before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  background: url("Images/Test.jpg") no-repeat center center/cover;
  height: 900px;
  width: 100%;
  z-index: -1;
}

.main {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: absolute;
  top: 30%;
  right: 10%;
}

.headers {
  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
  font-size: 3rem;
  text-align: center;
  margin: 40px 0px;
}

/* About me Section */
#about {
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  padding: 20px;
  margin-bottom: 50px;
}

#pic {
  display: flex;
}
#pic img {
  width: 40%;
  height: 40%;
}
#intro {
  display: flex;
  flex-direction: column;
  text-align: justify;
  padding: 10px;
}
#intro h2 {
  font-size: 2rem;
  margin-bottom: 20px;
}

.story {
  font-family: "Times New Roman", Times, serif;
  font-size: 1.5rem;
}

/* portfolio section */
#portfolio {
  display: flex;
  flex-direction: column;
  background: black;
  color: var(--white);
  align-items: center;
  padding: 20px;
}

.websites {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  box-sizing: border-box;
}

.websites img {
  width: 20rem;
  height: 20rem;
  margin: 10px;
  opacity: 0.5;
  border: 10px var(--white) solid;
}

.websites img:hover {
  opacity: 1;
  width: 25rem;
  height:25rem;
}
/* Contact section */
#contact {
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  background-color: var(--gray);
  color: var(--white);
  padding: 20px;
  align-items: center;
}

#contact ul {
  display: flex;
  list-style: none;
  margin: 35px 0px;
}

#contact ul li {
  font-family: "Times New Roman", Times, serif;
  font-size: 1.3rem;
  font-weight: bold;
}

#contact ul li a {
  text-decoration: none;
  color: var(--white);
  padding: 15px 35px;
  transition: all 0.5s ease;
}

#contact ul li a:hover {
  background-color: var(--white);
  color: black;
  box-shadow: 0 0 10px var(--white);
}

/* Screen Size changes */
/* Medium */
@media screen and (max-width: 992px) {
  /* Nav */
  .nav ul {
    flex-wrap: wrap;
    align-items: center;
  }

  .nav ul li {
    font-size: 1.1rem;
  }

  /* Headers */
  .headers {
    font-size: 2.5rem;
  }

  /* About */
  #pic {
    flex-direction: column;
    align-items: center;
  }

  #pic img {
    width: 30rem;
    height: 30rem;
  }

  #intro h2 {
    text-align: center;
    padding: 10px;
  }

  #contact ul {
    flex-wrap: wrap;
    align-items: center;
  }

  .pic img {
    height: 300px;
    width: 300px;
  }
}

/* Small */
@media screen and (max-width: 768px) {
  .nav ul li {
    font-size: 0.8rem;
  }
  /* Home */
  #home {
    height: 820px;
  }

  .headers {
    font-size: 1.7rem;
  }

  /* About */
  #pic img {
    width: 30rem;
    height: 30rem;
  }

  #intro h2 {
    font-size: 1.5rem;
  }

  /* Portfolio */
  .websites img {
    width: 25rem;
    height: 25rem;
    margin: 10px;
  }

  /* Contacts */
  #contact ul {
    flex-direction: column;
    align-items: center;
  }
}

